# UniPlan

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.observability.yml  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  요구사항명세서.md
.agent/workflows/: arch-review.md  sync-from-claude.md
.claude/: CLAUDE.md  settings.local.json
.claude/agents/: architecture-reviewer.md  code-reviewer.md  planner.md  product-manager.md  qa-reviewer.md  tdd-guide.md
.claude/commands/: adr.md  arch-review.md  code-review.md  doc-sync.md  dotclaude.md  frontend-sync.md  plan.md  pm.md  qa-review.md  tdd.md  test.md
.claude/docs/: architecture.md  ecc-analysis.md  workflow-decisions.md
.github/: copilot-instructions.md
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
docs/: README.md  architecture.md  features.md  guides.md  requirements.md
scripts/: README.md  code_metrics.py  pyproject.toml
scripts/crawler/: .gitignore  CLAUDE.md  FIELD_MAPPING.md  README.md  TRANSFORMATION_GUIDE.md  crawl_metadata.py  pyproject.toml  run.py  run_crawler.py  transformer.py  upload_to_service.py
scripts/crawler/common/: __init__.py  schema.py  uploader.py  validator.py
scripts/crawler/config/: khu_config.py
scripts/crawler/crawler/: data_js_parser.py  data_parser.py  khu_crawler.py  validator.py
scripts/crawler/output/: .gitkeep  data_js_raw_2025_2.js
scripts/crawler/sample/: sample_data.txt  sample_data_tiny.txt  sample_list.txt  sample_list_tiny.txt
scripts/crawler/tests/: README.md  test_full_crawler.py  test_khu_parser.py  test_multiple_depts.py  test_quick.py  test_regex.py  test_single_dept.py
scripts/crawler/universities/: __init__.py
scripts/crawler/universities/khu/: README.md  __init__.py  config.py  crawler.py  parser.py
tests/e2e/: .env.example  README.md  conftest.py  package-lock.json  package.json  playwright.config.ts  pubspec.yaml  pyproject.toml  test_auth.py  test_courses.py  test_registration.py  test_scenario.py  test_timetable.py  test_wishlist.py
tests/e2e/fixtures/: auth.setup.ts  base.fixture.ts  constants.ts  global.setup.ts
tests/e2e/helpers/: api.helper.ts
tests/e2e/pages/: course.page.ts  login.page.ts  registration.page.ts  scenario.page.ts  signup.page.ts  timetable.page.ts  wishlist.page.ts
tests/e2e/specs/: auth.spec.ts  course.spec.ts  registration.spec.ts  scenario.spec.ts  smoke.spec.ts  timetable.spec.ts  wishlist.spec.ts
tests/e2e/test/: auth_test.dart  full_workflow_test.dart  registration_test.dart
tests/e2e/test/helpers/: http_client.dart  test_context.dart
tests/infra/: conftest.py  pyproject.toml  test_grafana.py  test_loki.py  test_prometheus.py  test_tempo.py
(+471 files in other folders)
