[project]
name = "uniplan-scripts"
version = "0.1.0"
description = "Utility scripts for UniPlan project"
authors = [
    {name = "HyeonJun Jeon",email = "teddy3582@naver.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "requests (==2.31.0)",
    "beautifulsoup4 (==4.12.2)",
    "python-dotenv (==1.0.0)",
    "lxml (==4.9.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
