[project]
name = "uniplan-scripts"
version = "0.1.0"
description = "Utility scripts for UniPlan project"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "python-dotenv>=1.0.0",
    "lxml>=4.9.3",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]
